--- a/assets/scss/pages/videoDetail.scss
+++ b/assets/scss/pages/videoDetail.scss
@@ -26,11 +26,37 @@
       .video__description {
         font-size: 16px;
       }
+      .video__author{
+        a {
+          color: #a1cae2;
+        }
+      }
     }
     .video__comments {
       margin-top: 25px;
-    .video__comment-number {
+      text-align: center;
+      .video__comment-number {
         font-size: 18px;
-    }
+      }
+      .add__comment {
+        margin-top: 25px;
+        width: 100%;
+        input {
+          width: 100%;
+        }
+      }
+      .video__comments-list {
+        margin-top: 50px;
+        li {
+          background-color: #3498db;
+          color: white;
+          padding: 15px;
+          border-radius: 20px;
+          border-bottom-left-radius: 0px;
+          &:not(:last-child) {
+            margin-bottom: 15px;
+          }
+        }
+      }
     }
   }
