--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -1,9 +1,11 @@
 .social-login
     button.social-login--git
-        span
-            i.fab.fa-github
-        |Continue With Github
+        a(href=routes.github)
+            span
+                i.fab.fa-github
+            |Continue With Github
     button.social-login--facebook
-        span
-            i.fab.fa-facebook
-        |Continue With Facebook
+        a(href=routes.facebook)
+            span
+                i.fab.fa-facebook
+            |Continue With Facebook
