Wetube Final (Bug Fix)

--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -32,15 +32,15 @@ block content
                 input(type="text", placeholder="Add a comment")
             ul.video__comments-list#jsCommentList
                 each comment in video.comments.reverse()
-                    if video.creator.id === comment.creator
+                    if video.creator.id === comment.creator.toString()
                         li.video-commentor
                             span=comment.text
-                            if loggedUser && comment.creator === loggedUser.id
+                            if loggedUser && comment.creator.toString() === loggedUser.id
                                 button#jsDeleteComment
                                     i.fas.fa-eraser
                     else
                         li.not-video-commentor
                             span=comment.text
-                            if loggedUser && comment.creator === loggedUser.id
+                            if loggedUser && comment.creator.toString() === loggedUser.id
                                 button#jsDeleteComment
                                     i.fas.fa-eraser
