--- a/assets/scss/pages/videoDetail.scss
+++ b/assets/scss/pages/videoDetail.scss
@@ -46,11 +46,44 @@
         }
       }
       .video__comments-list {
+        width: 100%;
+        min-width: 600px;
+        max-width: 850px;
         margin-top: 50px;
+        display: flex;
+        flex-direction: column;
         .video-commentor {
+          width: 400px;
+          height: 50px;
+          align-self: flex-start;
           display: flex;
           justify-content: space-between;
           background-color: #3498db;
+          color: white;
+          padding: 15px;
+          border-radius: 20px;
+          border-bottom-left-radius: 0px;
+          &:not(:last-child) {
+            margin-bottom: 15px;
+          }
+          span {
+            align-self: center;
+          }
+          button {
+            background-color: gray;
+            padding: 0px 0px;
+            width: 25px;
+            height: 25px;
+            font-size: 10px;
+          }
+        }
+        .not-video-commentor {
+          width: 400px;
+          height: 50px;
+          align-self: flex-end;
+          display: flex;
+          justify-content: space-between;
+          background-color: gray;
           color: white;
           padding: 15px;
           border-radius: 20px;
@@ -63,30 +96,9 @@
           }
           button {
             padding: 0px 0px;
-            width: 30px;
-            height: 30px;
-            font-size: 15px;
-          }
-        }
-        .not-video-commentor {
-          display: flex;
-          justify-content: space-between;
-          background-color: gray;
-          color: white;
-          padding: 15px;
-          border-radius: 20px;
-          border-bottom-left-radius: 0px;
-          &:not(:last-child) {
-            margin-bottom: 15px;
-          }
-          span {
-            align-self: center;
-          }
-          button {
-            padding: 0px 0px;
-            width: 30px;
-            height: 30px;
-            font-size: 15px;
+            width: 25px;
+            height: 25px;
+            font-size: 10px;
           }
         }
       }
